--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ixudra/curl": "*",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "tzsk/otp": "^9.0"
